<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">arabaServisiUygulama</string>
    <string name="data">Result Text</string>
    <string name="fetch_data">Fetch Data</string>
    <string name="put_data">Put Data</string>
    <string name="username">İsim</string>
    <string name="password">Şifre</string>
    <string name="login">Giriş Yap</string>
    <string name="signuphere">Hesabınız yok mu? Kaydolun.</string>
    <string name="signup">Üye Ol</string>
    <string name="loginhere">Zaten bir hesabın var mı? Giriş yap.</string>
    <string name="kullaniciAd">Ad</string>
    <string name="kullaniciSoyad">Soyad</string>
    <string name="Email">Email</string>
    <string name="signup1">Hesabınız yok mu? Kaydolun</string>
    <string name="title_activity_car_information">CarInformation</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="BoyamaKaporta">
Boya ve kaporta işleri, aracınızın dış görünüşünü yeniler ve hasarları giderir. Bu hizmet, aracınızın estetiğini ve değerini arttırır, aynı zamanda güvenliğini de sağlar. Araba servisleri, profesyonel ekipman ve tecrübeli personel ile bu işlemleri doğru bir şekilde gerçekleştirir. Aracınızın yeniden parlaklığına kavuşması için boya ve kaporta işlerini yaptırabilirsiniz.</string>
    <string name="PeriyodikBakim">Aracınızın periyodik bakımlarını düzenli olarak yaptırmak, aracınızın performansını ve güvenliğini sağlar. Yağ değişimi, frenlerin kontrolü, filtre değişimi, rot balans ayarı, akü kontrolü ve araç içi klima kontrolü bu hizmetler arasındadır. Bakımlar aracınızın ömrünü uzatır ve sürüş deneyiminizi keyifli hale getirir.</string>
    <string name="talepButon">Talep oluştur</string>

    <string-array name="yakit_turleri">
        <item>Benzin</item>
        <item>Dizel</item>
        <item>Elektrik</item>
        <item>Hybrid</item>
    </string-array>
    <string-array name="markalar">
        <item>Audi</item>
        <item>BMW</item>
        <item>Citroën</item>
        <item>Dacia</item>
        <item>Fiat</item>
        <item>Ford</item>
        <item>Honda</item>
        <item>Hyundai</item>
        <item>Kia</item>
        <item>Mercedes-Benz</item>
        <item>Nissan</item>
        <item>Opel</item>
        <item>Peugeot</item>
        <item>Renault</item>
        <item>Toyota</item>
        <item>Volkswagen</item>
        <item>Volvo</item>
    </string-array>


    <string-array name="yillar">
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>


    </string-array>

    <string-array name="periyodik_bakim">
        <item>Periyodik Bakım</item>
    </string-array>
    <string-array name="onarim_hizmeti">
        <item>Onarım Hizmetleri</item>
    </string-array>

    <string-array name="boyama_kaporta">
        <item android:textColor="#ffffff">Boyama ve Kaporta</item>
    </string-array>
    <string-array name="modeller">
        <item>Benzin</item>
        <item>Dizel</item>
        <item>Elektrik</item>
        <item>Hybrid</item>
    </string-array>

    <string name="adres1">Esentepe Mah. İnönü Cad. Kartal Oto Sanayi Sitesi D:b8 Blok Kartal/İstanbul</string>
    <string name="adres2">Tatlıkuyu Mah. Akçasaray Cad. No:115/B Gebze/Kocaeli</string>
    <string name="adres3">Pişmaniye Mah. Şeker Sok. No:41 İzmit/Kocaeli</string>

    <string name="title_activity_randevu">Randevu</string>
    <string name="OnarimHizmetleri">Araba servisleri, araçların ihtiyaç duyduğu tamir işlemlerini gerçekleştirir. Bu hizmetler arasında motor, şanzıman, fren, süspansiyon ve elektronik sistemlerin onarımı yer alır. Profesyonel araba servisleri, araçlarınızı güvenle teslim edebileceğiniz, deneyimli ve uzman ekibiyle araçlarınızı en iyi şekilde onarır. Böylece, aracınızın ömrünü uzatır ve güvenliğinizi sağlar.</string>

    <string name="app_name1">Yeni şifre belirlemek için E-mail adresinizi giriniz</string>
    <string name="mail1">E-mail adresi </string>
</resources>