<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/iletisim"
    tools:context=".IletisimBilgilerimiz">

    <TextView
        android:id="@+id/editTextTextPostalAddress6"
        android:layout_width="131dp"
        android:layout_height="28dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/poppinsbold"
        android:text="İzmit:"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FE2517"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.826" />

    <TextView
        android:id="@+id/editTextTextPostalAddress5"
        android:layout_width="131dp"
        android:layout_height="28dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/poppinsbold"
        android:text="Gebze:"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FE2517"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />

    <TextView
        android:id="@+id/editTextTextPostalAddress3"
        android:layout_width="333dp"
        android:layout_height="58dp"
        android:autoSizeTextType="uniform"
        android:text="@string/adres3"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.589"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.925" />

    <TextView
        android:id="@+id/editTextTextPostalAddress4"
        android:layout_width="131dp"
        android:layout_height="28dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/poppinsbold"
        android:text="İstanbul:"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FE2517"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.449" />

    <TextView
        android:id="@+id/editTextTextPostalAddress"
        android:layout_width="349dp"
        android:layout_height="86dp"
        android:autoSizeTextType="uniform"
        android:text="@string/adres1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.741"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.548" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="31dp"
        android:layout_height="27dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.015"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45"
        app:srcCompat="@drawable/konum" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="31dp"
        android:layout_height="27dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65"
        app:srcCompat="@drawable/konum" />

    <TextView
        android:id="@+id/editTextTextPostalAddress2"
        android:layout_width="334dp"
        android:layout_height="62dp"
        android:autoSizeTextType="uniform"
        android:text="@string/adres2"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="31dp"
        android:layout_height="27dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.015"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.826"
        app:srcCompat="@drawable/konum" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="269dp"
        android:layout_height="231dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.142"
        app:srcCompat="@drawable/usta" />

    <TextView
        android:id="@+id/editTextText"
        android:layout_width="388dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:inputType="text"
        android:text="İletişim Bilgilerimiz"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>